# Aquila-R

./: .coverage  .env  .gitignore  IMPLEMENTATION_ROADMAP.md  LICENSE  README.md  TECHNICAL_METRICS.md  pyproject.toml
aquila_r/: __init__.py  cli.py
aquila_r.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
aquila_r/core/: __init__.py  agent.py  config.py  identity.py  llm.py  memory.py
aquila_r/language/: __init__.py  detector.py  glossary.py  translator.py
aquila_r/methodology/: __init__.py  assumptions.py  frameworks.py  validation.py
aquila_r/modules/: __init__.py  base.py  critical.py  evidence.py  literature.py  synthesis.py  writing.py
aquila_r/output/: __init__.py  formatters.py  standards.py
aquila_r/tools/: __init__.py  base.py  parsing.py  retrieval.py
examples/: basic_usage.py
tests/: test_core.py  test_language.py  test_methodology.py  test_output.py
